Fixed Alignment in custom form

--- a/src/components/Animations/ButtonGlow.css
+++ b/src/components/Animations/ButtonGlow.css
@@ -32,7 +32,7 @@
     background: transparent;
 }
 
-.glow-on-hover:hover:before {
+.glow-on-hover:before {
     opacity: 1;
 }
 
